--- a/styles/card.css
+++ b/styles/card.css
@@ -8,94 +8,80 @@
   padding: 30px 14px 15px;
   -webkit-box-sizing: content-box;
           box-sizing: content-box; }
-
-.card:hover {
-  -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.07);
-          box-shadow: 0 2px 5px rgba(0, 0, 0, 0.07); }
-
-.card--photo {
-  width: 160px;
-  height: 134px;
-  margin-bottom: 29px;
-  margin-left: 5px; }
-
-.card--description {
-  text-align: left;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 15px;
-  margin-bottom: 0; }
-
-.card--code {
-  font-size: 11px;
-  line-height: 13px;
-  margin: 5px auto 15px; }
-
-.card--star--review {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-bottom: 4px; }
-
-.card--star,
-.card--star--grey {
-  background: url(../images/star-active.svg) no-repeat center;
-  height: 15px;
-  width: 15px;
-  margin-right: 4px;
-  display: inline-block; }
-
-.card--star--grey {
-  background: url(../images/star.svg) no-repeat center; }
-
-.card--review {
-  font-size: 11px;
-  line-height: 13px;
-  margin-left: 17.6px;
-  display: inline-block; }
-
-.card--prices {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-  margin-bottom: 19px; }
-
-.card--price--name {
-  font-size: 11px;
-  line-height: 13px;
-  margin-right: 62.5px; }
-
-.card--price--value {
-  font-size: 16px;
-  line-height: 19px;
-  font-weight: bold;
-  margin-bottom: 10px; }
-
-.card--buy {
-  text-decoration: none;
-  color: #fff;
-  background-color: #00acdc;
-  border-radius: 5px;
-  text-align: center;
-  padding: 11px 58px 12px 57px;
-  font-weight: 700;
-  text-transform: uppercase;
-  font-size: 14px;
-  line-height: 16px; }
-
-.card--buy:hover {
-  color: #00acdc;
-  background: #fff;
-  border: 1px solid;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  border-radius: 5px;
-  padding: 10px 57px 11px 56px; }
+  .card:hover {
+    -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.07);
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.07); }
+  .card--photo {
+    width: 160px;
+    height: 134px;
+    margin-bottom: 29px;
+    margin-left: 5px; }
+  .card--description {
+    text-align: left;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 15px;
+    margin-bottom: 0; }
+  .card--code {
+    font-size: 11px;
+    line-height: 13px;
+    margin: 5px auto 15px; }
+  .card--star--review {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-bottom: 4px; }
+  .card--star, .card--star--grey {
+    background: url(../images/star-active.svg) no-repeat center;
+    height: 15px;
+    width: 15px;
+    margin-right: 4px;
+    display: inline-block; }
+  .card--star--grey {
+    background: url(../images/star.svg) no-repeat center; }
+  .card--review {
+    font-size: 11px;
+    line-height: 13px;
+    margin-left: 17.6px;
+    display: inline-block; }
+  .card--prices {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    margin-bottom: 19px; }
+  .card--price--name {
+    font-size: 11px;
+    line-height: 13px;
+    margin-right: 62.5px; }
+  .card--price--value {
+    font-size: 16px;
+    line-height: 19px;
+    font-weight: bold;
+    margin-bottom: 10px; }
+  .card--buy {
+    text-decoration: none;
+    color: #fff;
+    background-color: #00acdc;
+    border-radius: 5px;
+    text-align: center;
+    padding: 11px 58px 12px 57px;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 14px;
+    line-height: 16px; }
+    .card--buy:hover {
+      color: #00acdc;
+      background: #fff;
+      border: 1px solid;
+      -webkit-box-sizing: border-box;
+              box-sizing: border-box;
+      border-radius: 5px;
+      padding: 10px 57px 11px 56px; }
 
 /*# sourceMappingURL=card.css.map */
