--- a/styles/card.css
+++ b/styles/card.css
@@ -1,5 +1,5 @@
 .card {
-  font-family: Roboto, sans-serif;
+  font-family: Roboto, Arial, sans-serif;
   width: 170px;
   height: 356px;
   background: #fff;
@@ -11,60 +11,34 @@
   .card:hover {
     -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.07);
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.07); }
-  .card--photo {
+  .card__photo {
     width: 160px;
     height: 134px;
     margin-bottom: 29px;
     margin-left: 5px; }
-  .card--description {
+  .card__description {
     text-align: left;
     font-weight: 500;
     font-size: 12px;
     line-height: 15px;
     margin-bottom: 0; }
-  .card--code {
+  .card__code {
     font-size: 11px;
     line-height: 13px;
     margin: 5px auto 15px; }
-  .card--star--review {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    margin-bottom: 4px; }
-  .card--star, .card--star--grey {
-    background: url(../images/star-active.svg) no-repeat center;
-    height: 15px;
-    width: 15px;
-    margin-right: 4px;
-    display: inline-block; }
-  .card--star--grey {
-    background: url(../images/star.svg) no-repeat center; }
-  .card--review {
+  .card__review {
     font-size: 11px;
-    line-height: 13px;
-    margin-left: 17.6px;
-    display: inline-block; }
-  .card--prices {
+    line-height: 13px; }
+  .card__prices {
+    clear: both;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-align: end;
         -ms-flex-align: end;
             align-items: flex-end;
-    margin-bottom: 19px; }
-  .card--price--name {
-    font-size: 11px;
-    line-height: 13px;
-    margin-right: 62.5px; }
-  .card--price--value {
-    font-size: 16px;
-    line-height: 19px;
-    font-weight: bold;
     margin-bottom: 10px; }
-  .card--buy {
+  .card__buy {
     text-decoration: none;
     color: #fff;
     background-color: #00acdc;
@@ -75,7 +49,7 @@
     text-transform: uppercase;
     font-size: 14px;
     line-height: 16px; }
-    .card--buy:hover {
+    .card__buy:hover {
       color: #00acdc;
       background: #fff;
       border: 1px solid;
@@ -83,5 +57,33 @@
               box-sizing: border-box;
       border-radius: 5px;
       padding: 10px 57px 11px 56px; }
+
+.block__stars {
+  float: left;
+  margin-right: 21.5px; }
+
+.star {
+  background: url(../images/star.svg) no-repeat center;
+  height: 15px;
+  width: 15px;
+  display: inline-block; }
+
+.stars--1 .star:nth-child(-n+1),
+.stars--2 .star:nth-child(-n+2),
+.stars--3 .star:nth-child(-n+3),
+.stars--4 .star:nth-child(-n+4),
+.stars--5 .star:nth-child(-n+5) {
+  background-image: url(../images/star-active.svg); }
+
+.price__name {
+  font-size: 11px;
+  line-height: 13px;
+  margin-right: 62.5px; }
+
+.price__value {
+  font-size: 16px;
+  line-height: 19px;
+  font-weight: bold;
+  margin-bottom: 10px; }
 
 /*# sourceMappingURL=card.css.map */
