--- a/styles/main.css
+++ b/styles/main.css
@@ -113,6 +113,7 @@ body {
     line-height: 13px;
     margin: 5px auto 15px; }
   .card__review {
+    display: inline-block;
     font-size: 11px;
     line-height: 13px; }
   .card__prices {
@@ -144,9 +145,9 @@ body {
       border-radius: 5px;
       padding: 10px 57px 11px 56px; }
 
-.block__stars {
-  float: left;
-  margin-right: 21.5px; }
+.stars {
+  display: inline-block;
+  margin-right: 17.5px; }
 
 .star {
   background: url(../images/star.svg) no-repeat center;
