--- a/styles/card.css
+++ b/styles/card.css
@@ -27,7 +27,12 @@
     line-height: 13px;
     margin: 5px auto 15px; }
   .card__review {
-    display: inline-block;
+    display: grid;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: end;
+    margin-top: -18px;
+    margin-bottom: 5px;
     font-size: 11px;
     line-height: 13px; }
   .card__prices {
@@ -38,7 +43,7 @@
     -webkit-box-align: end;
         -ms-flex-align: end;
             align-items: flex-end;
-    margin-bottom: 10px; }
+    margin-bottom: 20px; }
   .card__buy {
     text-decoration: none;
     color: #fff;
@@ -57,11 +62,10 @@
       -webkit-box-sizing: border-box;
               box-sizing: border-box;
       border-radius: 5px;
-      padding: 10px 57px 11px 56px; }
+      padding: 11px 58px 12px 57px; }
 
 .stars {
-  display: inline-block;
-  margin-right: 17.5px; }
+  display: inline-block; }
 
 .stars__star {
   background: url(../images/star.svg) no-repeat center;
