--- a/styles/header.css
+++ b/styles/header.css
@@ -15,7 +15,8 @@
       -ms-flex-align: center;
           align-items: center;
   padding: 0 50px;
-  height: 60px; }
+  height: 60px;
+  margin-bottom: 50px; }
 
 .logo {
   height: 40px;
