--- a/styles/main.css
+++ b/styles/main.css
@@ -1,22 +1,3 @@
-body {
-  margin: 0; }
-
-.row {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  margin: 50px 128px; }
-
-@media all and (max-width: 1099px) {
-  .row {
-    margin: 50px 40px;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between; } }
-
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box; }
@@ -34,7 +15,8 @@ body {
       -ms-flex-align: center;
           align-items: center;
   padding: 0 50px;
-  height: 60px; }
+  height: 60px;
+  margin-bottom: 50px; }
 
 .logo {
   height: 40px;
@@ -113,7 +95,12 @@ body {
     line-height: 13px;
     margin: 5px auto 15px; }
   .card__review {
-    display: inline-block;
+    display: grid;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: end;
+    margin-top: -18px;
+    margin-bottom: 5px;
     font-size: 11px;
     line-height: 13px; }
   .card__prices {
@@ -124,7 +111,7 @@ body {
     -webkit-box-align: end;
         -ms-flex-align: end;
             align-items: flex-end;
-    margin-bottom: 10px; }
+    margin-bottom: 20px; }
   .card__buy {
     text-decoration: none;
     color: #fff;
@@ -143,11 +130,10 @@ body {
       -webkit-box-sizing: border-box;
               box-sizing: border-box;
       border-radius: 5px;
-      padding: 10px 57px 11px 56px; }
+      padding: 11px 58px 12px 57px; }
 
 .stars {
-  display: inline-block;
-  margin-right: 17.5px; }
+  display: inline-block; }
 
 .stars__star {
   background: url(../images/star.svg) no-repeat center;
@@ -172,5 +158,17 @@ body {
   line-height: 19px;
   font-weight: bold;
   margin-bottom: 10px; }
+
+body {
+  margin: 0; }
+
+main {
+  display: grid;
+  grid-template-columns: repeat(4, 200px);
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  grid-column-gap: 48px;
+  grid-row-gap: 50px; }
 
 /*# sourceMappingURL=main.css.map */
